RESOLVED FIXED269281
REGRESSION (iOS 17.4 Beta): No incoming video in Teams VA
https://bugs.webkit.org/show_bug.cgi?id=269281
Summary REGRESSION (iOS 17.4 Beta): No incoming video in Teams VA
Alexey Reznikov
Reported 2024-02-13 01:59:26 PST
Teams VA url: https://teams.microsoft.com/l/meetup-join/19%3ameeting_MzY3NjFmYjctYzAxNi00NGNlLWJlNzAtNzVkYzkyZGJhNDY2%40thread.v2/0?context=%7b%22Tid%22%3a%2272f988bf-86f1-41af-91ab-2d7cd011db47%22%2c%22Oid%22%3a%22a99e08ae-85e2-48d7-ac2f-a010bdd13e2f%22%7d * Join Teams VA using a device running iOS 17.4 Beta * Join Teams VA using a device running iOS 17.3 * Join Teams VA with video using Teams Native Observe no incoming video for iOS 17.4 Beta device from, while iOS 17.3 has incoming video.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-13 02:02:00 PST
Alexey Reznikov
Comment 2 2024-02-13 02:26:18 PST
(In reply to Alexey Reznikov from comment #0) > Teams VA url: > https://teams.microsoft.com/l/meetup-join/ > 19%3ameeting_MzY3NjFmYjctYzAxNi00NGNlLWJlNzAtNzVkYzkyZGJhNDY2%40thread.v2/ > 0?context=%7b%22Tid%22%3a%2272f988bf-86f1-41af-91ab- > 2d7cd011db47%22%2c%22Oid%22%3a%22a99e08ae-85e2-48d7-ac2f-a010bdd13e2f%22%7d > > * Join Teams VA using a device running iOS 17.4 Beta > * Join Teams VA using a device running iOS 17.3 > * Join Teams VA with video using Teams Native > > > Observe no incoming video for iOS 17.4 Beta device from, while iOS 17.3 has > incoming video. Correct url for VA join: https://visit.teams.microsoft.com/webrtc-web/?tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47&threadId=19:meeting_MzY3NjFmYjctYzAxNi00NGNlLWJlNzAtNzVkYzkyZGJhNDY2@thread.v2&organizerId=a99e08ae-85e2-48d7-ac2f-a010bdd13e2f
youenn fablet
Comment 3 2024-02-13 03:15:22 PST
Just had a test and Safari macOS or Chrome macOS to Safari iOS seems to work. But I could not see Alexey on Safari iOS but could on Safari macOS.
youenn fablet
Comment 4 2024-02-13 10:26:29 PST
EWS
Comment 5 2024-02-13 14:43:28 PST
Committed 274581@main (1392a12ad3f1): <https://commits.webkit.org/274581@main> Reviewed commits have been landed. Closing PR #24351 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.