REGRESSION (iOS 17.4 Beta): No incoming video in Teams VA rdar://122859173 https://bugs.webkit.org/show_bug.cgi?id=269281

Reviewed by Brent Fulgham.

WebRTC applicartions typically do not care about reordering since it hits the latency.
We are thus setting the window size to 0 when AVC is false, which is the case for libwebrtc decoders.
WebCodecs websites that had issues with reordering are using AVC, so should not be broken by this change.

* Source/ThirdParty/libwebrtc/Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH264.mm:
(-[RTCVideoDecoderH264 decodeData:size:timeStamp:]):

Canonical link: https://commits.webkit.org/274581@main